--- a/css/style.css
+++ b/css/style.css
@@ -4273,9 +4273,8 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
     -ms-flex-line-pack: justify;
         align-content: space-between;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     max-width: 100%;
-    padding-bottom: 130px;
     background-color: white;
     opacity: 1;
     -webkit-transition: 0.5s ease;
