--- a/css/style.css
+++ b/css/style.css
@@ -4275,7 +4275,7 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
     -ms-flex-line-pack: justify;
         align-content: space-between;
     width: 100%;
-    height: 600px;
+    height: 100vh;
     max-width: 100%;
     padding-bottom: 130px;
     background-color: white;
