--- a/css/style.css
+++ b/css/style.css
@@ -5398,7 +5398,6 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 
 .results__item {
   position: relative;
-  z-index: 100;
   width: 33.33333%;
   padding-bottom: 15px;
   margin-bottom: 43px;
@@ -5479,6 +5478,11 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
   margin-bottom: 85px;
 }
 
+.sections-body .footer {
+  position: relative;
+  z-index: -1;
+}
+
 .sections .new-select::before,
 .sections .new-select::after {
   display: none;
@@ -5486,7 +5490,6 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 
 .sections-container {
   margin-bottom: 85px;
-  overflow: hidden;
 }
 
 .sections__inner {
@@ -5635,49 +5638,38 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 
 .sections__fill-star {
   fill: #f67973;
-  -webkit-transition: 0.2s ease-in-out;
-  -o-transition: 0.2s ease-in-out;
-  transition: 0.2s ease-in-out;
-  cursor: pointer;
-}
-
-.sections__fill-star {
-  outline: none;
-}
-
-.sections__fill-star:hover,
-.sections__fill-star:focus {
-  opacity: 60%;
-}
-
-.sections__fill-star:active {
-  opacity: 30%;
 }
 
 .sections__modal {
   position: absolute;
   z-index: 1000;
-  top: 431px;
+  top: 50%;
   left: 0;
   right: 0;
   visibility: hidden;
   opacity: 0;
 }
 
-.sections__item {
-  z-index: 10;
-}
-
-.sections__item--active {
-  z-index: 100;
-}
-
-.sections__item--active .sections__modal {
+.sections__modal--active .sections__modal {
   visibility: visible;
   opacity: 1;
 }
 
-.sections__item--active .sections__image::before {
+.sections__item:nth-child(3n+2) .sections__modal {
+  left: -100%;
+}
+
+.sections__item:nth-child(3n+3) .sections__modal {
+  left: auto;
+  right: 0;
+}
+
+.sections__wrapper--active .sections__modal {
+  visibility: visible;
+  opacity: 1;
+}
+
+.sections__wrapper--active .sections__image::before {
   z-index: 100;
   visibility: visible;
   opacity: 1;
@@ -6177,21 +6169,6 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
   text-align: right;
 }
 
-.patterns__image {
-  margin-top: 0;
-  margin-bottom: 0;
-  width: 40px;
-  height: 36px;
-}
-
-.patterns__feature-description {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size: 14px;
-  line-height: 17px;
-  font-weight: bold;
-}
-
 .patterns {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -6324,6 +6301,10 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
       flex-wrap: wrap;
 }
 
+.patterns__features--figure ~ .new-select__list .new-select__item:first-child {
+  margin-right: 27px;
+}
+
 .patterns__features--metal ~ .new-select__list {
   left: -240px;
 }
@@ -6351,7 +6332,12 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 }
 
 .patterns__feature-description {
+  margin-top: 0;
+  margin-bottom: 0;
   margin-top: 5px;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: bold;
   text-align: center;
 }
 
@@ -6385,6 +6371,13 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 
 .patterns__icon:active {
   opacity: 30%;
+}
+
+.patterns__image {
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 40px;
+  height: 36px;
 }
 
 @media (max-width: 1199px) {
@@ -6876,6 +6869,22 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
     margin-bottom: 0;
   }
 
+  .sections__modal {
+    width: 708px;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+
+  .sections__item:nth-child(2n+2) .sections__modal {
+    left: auto;
+    right: 0;
+  }
+
+  .sections__item:nth-child(2n+1) .sections__modal {
+    left: 0;
+    right: auto;
+  }
+
   .statics-body .header {
     padding-bottom: 0;
     margin-bottom: 25px;
@@ -6960,6 +6969,37 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
   .statics__table-caption {
     margin-bottom: 30px;
     padding-left: 75px;
+  }
+
+  .specification__star {
+    right: auto;
+    left: 25px;
+    top: 25px;
+  }
+
+  .specification__image {
+    width: 485px;
+    height: 550px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 45px;
+  }
+
+  .specification__wrapper {
+    width: 100%;
+    padding: 0;
+  }
+
+  .specification__inner {
+    margin-bottom: 25px;
+  }
+
+  .specification__list {
+    margin-bottom: 45px;
+  }
+
+  .specification__button {
+    right: 30px;
   }
 }
 
@@ -7848,6 +7888,23 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
     margin-bottom: 5px;
   }
 
+  .sections__modal {
+    width: 100%;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 80px;
+  }
+
+  .sections__item:nth-child(2n+2) .sections__modal {
+    left: auto;
+    right: 0;
+  }
+
+  .sections__item:nth-child(2n+1) .sections__modal {
+    left: 0;
+    right: auto;
+  }
+
   .statics {
     font-size: 15px;
     line-height: 120%;
@@ -7953,5 +8010,72 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 
   .statics__inner {
     overflow-x: scroll;
+  }
+
+  .specification__star {
+    left: 10px;
+    top: 10px;
+  }
+
+  .specification__image {
+    width: 100%;
+    height: 340px;
+    margin-bottom: 25px;
+  }
+
+  .specification__inner {
+    margin-bottom: 15px;
+  }
+
+  .specification__list {
+    margin-bottom: 25px;
+  }
+
+  .specification__button {
+    right: 15px;
+    top: 15px;
+  }
+
+  .specification__price-value {
+    font-size: 28px;
+    line-height: 120%;
+  }
+
+  .specification__model-box {
+    padding-top: 0;
+  }
+
+  .patterns .new-select__list {
+    width: 280px;
+    left: -40px;
+    padding: 15px;
+  }
+
+  .patterns__features--metal ~ .new-select__list {
+    left: -120px;
+  }
+
+  .patterns__features--figure ~ .new-select__list {
+    width: 280px;
+    left: auto;
+    right: -34px;
+  }
+
+  .patterns__features--figure ~ .new-select__list .new-select__item {
+    width: 50%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 10px;
+  }
+
+  .patterns__features--figure ~ .new-select__list .new-select__item:first-child {
+    margin-right: 0;
+  }
+
+  .patterns__features--figure ~ .new-select__list .new-select__item span {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
