--- a/css/style.css
+++ b/css/style.css
@@ -2631,6 +2631,10 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
   overflow: hidden;
 }
 
+body.news-body .header--pages {
+  padding-bottom: 23px;
+}
+
 .header__wrapper {
   position: relative;
   z-index: 100;
@@ -3902,6 +3906,9 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 }
 
 .collections__description {
+  -webkit-transition: 0.2s ease-in-out;
+  -o-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
   position: relative;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
@@ -3971,6 +3978,15 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 
 .collections__item:nth-child(3n+1) .collections__description {
   width: 100%;
+}
+
+.collections__item {
+  outline: none;
+}
+
+.collections__item:hover,
+.collections__item:focus {
+  opacity: 60% !important;
 }
 
 .collections__image {
@@ -4851,13 +4867,17 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 50%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   margin-top: 0;
   margin-bottom: 0;
   margin-bottom: 70px;
@@ -5092,7 +5112,7 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 }
 
 .contacts-body .header {
-  padding-bottom: 115px;
+  padding-bottom: 23px;
 }
 
 .contacts {
@@ -5129,8 +5149,34 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 }
 
 .contacts__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   width: 47.8%;
   margin-bottom: 63px;
+}
+
+.contacts__item--phones {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.contacts__item--email {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contacts__item:last-of-type {
+  margin-bottom: 0;
 }
 
 .contacts__email {
@@ -5144,6 +5190,10 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 
 .contacts__email:active {
   opacity: 30%;
+}
+
+.contacts__phone {
+  display: block;
 }
 
 .contacts__phone {
@@ -5162,11 +5212,20 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 .contacts__description-title {
   margin-top: 0;
   margin-bottom: 0;
+  width: 100%;
   margin-bottom: 13px;
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
   color: black;
+}
+
+.contacts__description-title--phones {
+  text-align: right;
+}
+
+.contacts__description-title--email {
+  text-align: center;
 }
 
 .contacts__description {
@@ -5289,6 +5348,7 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 .contacts__map {
   width: 100%;
   height: 550px;
+  margin-bottom: 45px;
   background-image: url("../img/main/background/map.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -5471,7 +5531,7 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 }
 
 .sections-body .header {
-  padding-bottom: 115px;
+  padding-bottom: 23px;
 }
 
 .sections-body .pagination {
@@ -5643,7 +5703,7 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 .sections__modal {
   position: absolute;
   z-index: 1000;
-  top: 50%;
+  top: 0;
   left: 0;
   right: 0;
   visibility: hidden;
@@ -5683,6 +5743,10 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.sections__link--main {
+  margin-bottom: 45px;
 }
 
 .statics-body .header {
@@ -6391,6 +6455,10 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
     padding-bottom: 0;
   }
 
+  body.news-body .header--pages {
+    padding-bottom: 23px;
+  }
+
   .header__nav {
     padding-left: 0;
     max-width: 300px;
@@ -6760,7 +6828,6 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
   }
 
   .contacts-body .header {
-    padding-bottom: 0;
     margin-bottom: 25px;
   }
 
@@ -6838,7 +6905,6 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
   }
 
   .sections-body .header {
-    padding-bottom: 0;
     margin-bottom: 35px;
   }
 
@@ -7035,6 +7101,10 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 
   .header--closed {
     height: 100vh;
+  }
+
+  body.news-body .header--pages {
+    padding-bottom: 0;
   }
 
   .header__wrapper {
@@ -7746,9 +7816,29 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
     margin-bottom: 25px;
   }
 
+  .contacts__description-title--phones {
+    text-align: left;
+  }
+
+  .contacts__description-title--email {
+    text-align: left;
+  }
+
   .contacts__item {
     width: 100%;
     margin-bottom: 20px;
+  }
+
+  .contacts__item--phones {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+
+  .contacts__item--email {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 
   .contacts__list {
